--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,9 @@
 version: 0.1
 
 phases:
+  install:
+    runtime-versions:
+      java: openjdk-8
   build:
     commands:
       - echo Build completed on `date`
